--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.9.1",
+    "@neondatabase/serverless": "^0.10.4",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/adapter-neon": "^5.22.0",
+    "@prisma/adapter-pg": "^5.22.0",
+    "@prisma/client": "^5.22.0",
+    "@prisma/extension-accelerate": "1.2.1",
+    "@prisma/extension-pulse": "1.2.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -17,9 +25,6 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@prisma/client": "5.22.0",
-    "@prisma/extension-accelerate": "1.2.1",
-    "@prisma/extension-pulse": "1.2.0",
     "@types/node": "22.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -41,9 +46,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "prisma": "5.22.0",
-    "ts-node": "10.9.2"
+    "ts-node": "10.9.2",
+    "typescript": "^5"
   }
 }
